tests/test102.rael.exp
Error [1:17]: Expected an iterable
| loop :a through 3 {
|                 ^
